Bug 1966657: Only run shell jobs if JS_ExecuteScript returns true; r=iain

Differential Revision: https://phabricator.services.mozilla.com/D250193