js/src/jit-test/tests/atomics/bug1966657.js
@@ -1,0 +1,11 @@
+// |jit-test| --fuzzing-safe; --ion-offthread-compile=off; skip-if: helperThreadCount() === 0;
+evalInWorker(`
+  a = {
+    then() {
+      b
+    }
+  }
+  Promise.any([a])
+  c
+`)
+
